gcc/testsuite/gcc.dg/lto/pr45721_0.c
@@ -1,0 +1,8 @@
+/* { dg-lto-do assemble }  */
+void baz(void) {}
+void *y = (void *)baz;
+int main () { return 0; }
+/* { dg-lto-do assemble }  */
+void baz(void) {}
+void *y = (void *)baz;
+int main () { return 0; }
